--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="column is-narrow has-background-info is-flex is-flex-direction-column is-justify-content-flex-start" id="width">
             <div class="identite">
                 <h1 class="title has-text-centered has-text-white">Kevin Gauthier</h1>
-                <h2 class="subtitle has-text-centered has-text-white">Développeur Front End</h2>
+                <h2 class="subtitle has-text-centered has-text-white">Développeur Front-End</h2>
                 <hr>
             </div>
             <div id="infos" class="is-flex is-flex-direction-column is-justify-content-space-evenly is-fullheight"
