--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <h3 class="has-text-centered has-text-white mb-2">FORMATION</h3>
                     <p class="has-text-white">2016-2017</p>
                     <p class="has-text-white">Seconde Pro SN</p>
-                    <p class="has-text-white">Lycé Vaubant</p>
+                    <p class="has-text-white">Lycée Vauban</p>
                 </div>
                 <div class="langues mb-4">
                     <h3 class="has-text-centered has-text-white mb-2">LANGUES</h3>
