--- a/index.html
+++ b/index.html
@@ -26,13 +26,6 @@
             }
         }
 
-        #width {
-            @media (min-width: 1024px) {
-                max-width: 290px;
-            }
-
-            ;
-        }
     </style>
 
 </head>
@@ -40,7 +33,7 @@
 <body class="hero is-fullheight is-justify-content-center is-align-items-center has-background-grey">
 
     <div class="columns is-desktop is-flex-desktop is-justify-content-center" id="m-remove">
-        <div class="column is-narrow has-background-info is-flex is-flex-direction-column is-justify-content-flex-start" id="width">
+        <div class="column is-narrow has-background-info is-flex is-flex-direction-column is-justify-content-flex-start">
             <div class="identite">
                 <h1 class="title has-text-centered has-text-white">Kevin Gauthier</h1>
                 <h2 class="subtitle has-text-centered has-text-white">Développeur Front-End</h2>
