--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             </div>
 
             <div class="experience">
-                <h2 class="title is-4 has-text-link-dark">EXPERIENCE PROFESSIONEL</h2>
+                <h2 class="title is-4 has-text-link-dark">EXPERIENCE PROFESSIONNELLE</h2>
                 <div class="is-flex pb-5">
                     <div class="anner_entreprise column is-one-third is-one-third-mobile pt-0 pl-0">
                         <h5>2019</h5>
